# OOP4

./: .gitignore  CMakeLists.txt  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
test/: CMakeLists.txt  tests.cpp
